ADD: text report

--- a/sem05/lab01/tex/03-conclusion.tex
+++ b/sem05/lab01/tex/03-conclusion.tex
@@ -1,3 +1,6 @@
 \section*{Вывод}
 
+В данной лабораторной работе нами была реализована СНК на ПЛИС в системе
+проектирования Quartus II. Работоспособность системы на кристалле была
+проверена загрузкой в нее и выполнением простейших программ.
 
