--- a/sem05/rk01/q2/tex/01-title.tex
+++ b/sem05/rk01/q2/tex/01-title.tex
@@ -63,7 +63,7 @@
         \textbf{по курсу «Архитектура ЭВМ»}\\
         ~\\
         \fontsize{16pt}{16pt}\selectfont
-        \text{«ВОПРОС»}
+        \text{«Диаграмма работы FPM DRAM памяти»}
 	\end{center}
     ~\\
 
