--- a/sem05/lab02/tex/report.tex
+++ b/sem05/lab02/tex/report.tex
@@ -7,6 +7,13 @@
 
 \include{01-title}
 \setcounter{page}{2}
-\include{02-task01}
+\include{02-content}
+\include{03-intro}
+\include{04-analytical}
+\include{05-task01}
+\include{06-task02}
+\include{07-task03}
+\include{08-task04}
+\include{09-task05}
 
 \end{document}
