ADD: full lab02

--- a/sem05/lab02/tex/04-analytical.tex
+++ b/sem05/lab02/tex/04-analytical.tex
@@ -1,1 +1,20 @@
-jkdf
+\chapter{Основные теоретические сведения}
+
+Для достижения поставленных целей в настоящей лабораторной работе используется
+синтезируемое описание микропроцессорного ядра Taiga, реализующего систему
+команд RV32I семейства RISC-V.
+
+RISC-V является открытым современным набором команд, который может
+использоваться для построения как микроконтроллеров, так и
+высокопроизводительных микропроцессоров.  В связи с такой широкой областью
+применения в систему команд введена вариативность.  Таким образом, термин
+RISC-V фактически является названием для семейства различных систем команд,
+которые строятся вокруг базового набора команд, путем внесения в него различных
+расширений.
+
+
+В данной работе исследуется набор команд RV32I, который включает в себя
+основные команды 32-битной целочисленной арифметики кроме умножения и деления.
+В рамках данного набора команд мы не будем рассматривать системные команды,
+связанные с таймерами, системными регистрами, управлением привилегиями,
+прерываниями и исключениями.
