--- a/sem05/lab02/tex/05-task01.tex
+++ b/sem05/lab02/tex/05-task01.tex
@@ -1,5 +1,9 @@
 \chapter{Задание 1}
 
+Дизассемблирование программы по индивидуальному варианту.
+
+\section{Результаты выполнения}
+
 На листинге \ref{lst:var12} приведен текст программы по индивидуальному
 варианту.
 
@@ -10,10 +14,12 @@
 
 \mylisting{Псевдокод на языке C программы варианта}{pseudo}{1-29}{pseudo.c}
 
-Проанализировав исходный текст программы можно сделать вывод, что в регистре
-x31 в конце выполнения программы должна содержаться сумма элементов массива + 1
-(37).
-
 На листиге \ref{lst:hex} приведен дизассемблерный код.
 
 \mylisting{Дизассемблерный листинг}{hex}{1-20}{hex.txt}
+
+\section{Вывод}
+
+Проанализировав исходный текст программы можно сделать вывод, что в регистре
+x31 в конце выполнения программы должна содержаться сумма элементов массива + 1
+(37).
