--- a/sem05/lab02/tex/06-task02.tex
+++ b/sem05/lab02/tex/06-task02.tex
@@ -1,4 +1,17 @@
 \chapter{Задание 2}
 
+Получение снимка экрана, содержащего временную диаграмму выполнения стадий
+выборки и диспетчеризации команды с адресом \texttt{8000000c} на 2-ой итерации.
+
+\section{Результаты выполнения}
+
+На рисунке \ref{img:task02} представлены временные диаграммы выполнения стадий
+выборки и диспетчеризации необходимой команды.
+
 \img{50mm}{task02.pdf}{Выборка и диспетчеризация команды с адресом
 \texttt{8000000c} на второй итерации}{task02}
+
+\section{Вывод}
+
+Выборка и диспетчеризация данной команды происходят в 27 и 28 тактах
+соответственно.
