--- a/sem05/lab04/tex/04-analytical.tex
+++ b/sem05/lab04/tex/04-analytical.tex
@@ -1,2 +1,92 @@
 \chapter{Основные теоретические сведения}
 
+В данном разделе будут описаны технология разработки ускорителей вычислений на
+модулях Xilinx Alveo, а также архитектура разрабатываемого усорителя.
+
+\section{Технология разработки ускорителей вычислений на модулях Xilinx Alveo}
+
+Ускорителями вычислений принято называть специальные аппаратные устройства,
+способные выполнять ограниченный ряд задач с большей параллельностью и за
+меньшее время в сравнении с универсальными микропроцессорными ЭВМ. Как
+правило, ускоритель представляет собой структуру, включающую большое количество
+примитивных микропроцессорных устройств, объединенных шинами связей.
+
+Создание ускорителей вычислений является трудоемким процессом, так как
+охватывает не только аппаратную разработку самого устройства, но и предполагает
+оптимизацию архитектуры ЭВМ для обеспечения наибольшей пропускной способности
+каналов передачи операндов и результатов, а также минимизации задержек и
+вычислительных затрат при ожидании работы ускорителей. Можно условно разделить
+ускорители на два класса: ускорители на основе СБИС и на основе ПЛИС.
+
+В данной лабораторной работе мы изучим технологию создания ускорителей
+вычислений на основе ПЛИС (ускоритель \textbf{Xilinx Alveo U200} на основе ПЛИС
+xcu200-fsgd2104-2-e архитектуры Xilinx UltraScale).
+
+Для работы с ускорительной платой разработано специальное окружение
+\textbf{XRT} (Xilinx Runtime), включающее компоненты пользовательского
+пространства и драйвера ядра.
+
+В оборудовании, используемом для проведения лабораторной работы, использована
+так называемая XDMA сборка XRT, которая предполагает следующий сценарий
+взаимодействия ускорителя и пользовательского ПО:
+
+\begin{enumerate}
+    \item Пользовательское ПО сканирует и инициализирует доступные
+ускорительные платы, совместимые с XRT, определяет доступные ресурсы, создает
+программное окружение пользовательского аппаратного ядра ускорителя (далее
+используется термин kernel).
+    \item Ресурсы локальной памяти ускорительной платы отображаются в
+пространство памяти хост системы.
+    \item Инициализируются каналы DMA для прямого доступа к памяти ускорителя.
+    \item Данные, подлежащие обработке, копируются из ОЗУ в локальную память
+ускорителя посредством DMA.
+    \item Ядру ускорителя (или нескольким ядрам) посредством записи управляющих
+регистров, передаются параметры вычислений. Пользователь может увеличивать
+количество параметров по своему усмотрения. Типичным случаем является передача
+указателей на начало буферов исходных операндов и буфера результата, а также
+количество обрабатываемых значений.
+    \item Хост-система выдает сигнал Start ядрам ускорителей, после чего
+начинается обработка внутри платы Xilinx Alveo.
+    \item По завершении обработки kernel устанавливает флаг DONE, что вызывает
+прерывание по шине PCIe.
+    \item Драйвер обрабатывает прерывание и сообщает пользовательскому ПО о
+завершении обработки.
+    \item Пользовательское ПО инициализирует DMA передачу результатов из
+локальной памяти ускорителя в ОЗУ хост-системы.
+\end{enumerate}
+
+\section{Описание архитектуры разрабатываемого ускорителя}
+
+В ходе лабораторной работы будет использован базовый шаблон так называемого RTL
+проекта VINC, который может быть создан в IDE Xilinx Vitis и САПР Xilinx
+Vivado. Шаблон VINC выполняет попарное сложение чисел исходного массива и
+сохраняет результаты во втором массиве. Проект VINC включает:
+
+\begin{itemize}
+    \item Проект ПО хоста, выполняющий инициализацию аппаратного ядра и его
+тестирование через OpenCL вызовы.
+    \item Синтезируемый~~RTL~~проект~~ядра~~ускорителя~~на~~языках~~Verilog~~и
+SystemVerilog.
+    \item Функциональный тест ускорителя VINC на языке SystemVerilog.
+\end{itemize}
+
+Проект VINC представляет собой аппаратное устройство, связанное шиной AXI4 MM
+(Memory mapped) с DDR[i] памятью, и получающее настроечные параметры по
+интерфейсу AXI4 Lite от программного обеспечения хоста (рисунок
+\ref{img:funcScheme}). В рамках всей системы используется единое 64-х разрядное
+адресное пространство, в котором формируются адреса на всех AXI4 шинах.
+
+\img{70mm}{funcScheme}{Функциональная схема разрабатываемой аппаратной
+системы}{funcScheme}
+
+В каждой карте U200 имеется возможность подключить ускоритель к любому DDR[i]
+контроллеру в том регионе, где будет размещен проект. Всего для пользователя
+доступны 3 динамических региона: SLR0,1,2, для которых выделены каналы
+локальной памяти DDR[0], DDR[2], DDR[3] соответственно. Вся подключенная память
+DDR[0..3] доступна со стороны статического региона, в котором размещена
+аппаратная часть XRT.
+
+Выбор одного из регионов для размещения проектов осуществляется на этапе так
+называемой линковки конфигурационного файла при помощи компилятора
+v++(фактически: компоновки, размещение и трассировки нескольких проектов в
+единый конфигурационный файл).
