ADD: lab04 report without extra docs

--- a/sem05/lab04/tex/05-main.tex
+++ b/sem05/lab04/tex/05-main.tex
@@ -1,40 +1,86 @@
 \chapter{Практическая часть}
 
+В данном разделе представлен ход выполнения лабораторной работы.
+
 \section{Исходный проект VINC}
 
-\subsection{Моделирование}
+В данном подразделе описывается работа с исходным проектом VINC, код инкремента
+данных в котором представлен на рисунке \ref{img:inc01}.
 
 \img{15mm}{inc01}{Код инкремента данных}{inc01}
 
-\img{70mm}{diag01}{Транзакция чтения данных вектора на шине AXI4 MM из DDR памяти}{diag01}
+\subsection{Моделирование}
 
-\img{60mm}{diag02}{Транзакция запписи данных на шине AXI4 MM}{diag02}
+На рисунке \ref{img:diag01} рпредставлена транзация чтения данных вектора на
+шине AXI4 MM из DDR памяти, на рисунке \ref{img:diag02} -- транзация записи
+данных, на рисунке \ref{img:incDiag} -- инкремент данных в модуле.
+
+\img{70mm}{diag01}{Транзакция чтения данных вектора на шине AXI4 MM из DDR
+памяти}{diag01}
+
+\img{60mm}{diag02}{Транзакция записи данных на шине AXI4 MM}{diag02}
 
 \img{70mm}{incDiag}{Инкремент данных в модуле}{incDiag}
+~\\
+~\\
+~\\
 
 \section{Проект VINC по варианту}
 
-\subsection{Код индивидуального варианта}
+В данном подразделе описывается работа с проектом VINC по индивидуальному
+варианту, код инкремента данных в котором представлен на рисунке
+\ref{img:vInc01}.
 
 \img{15mm}{vInc01}{Код инкремента данных}{vInc01}
 
 \subsection{Моделирование}
 
+На рисунке \ref{img:vDiag01} рпредставлена транзация чтения данных вектора на
+шине AXI4 MM из DDR памяти, на рисунке \ref{img:vDiag02} -- транзация записи
+данных, на рисунке \ref{img:vIncDiag} -- инкремент данных в модуле.
+
 \img{60mm}{vDiag01}{Транзакция чтения данных вектора на шине AXI4 MM из DDR
-памяти}{diag01}
+памяти}{vDiag01}
 
-\img{60mm}{vDiag02}{Транзакция запписи данных на шине AXI4 MM}{diag02}
+\img{60mm}{vDiag02}{Транзакция запписи данных на шине AXI4 MM}{vDiag02}
 
-\img{60mm}{vIncDiag}{Инкремент данных в модуле}{incDiag}
+\img{60mm}{vIncDiag}{Инкремент данных в модуле}{vIncDiag}
 
 \subsection{Сборка проекта}
 
+Для сборки проекта компилятором \texttt{v++} используется конфигурационный файл
+\textit{*.cfg}, который содержит основную информацию для работы компилятора:
+
+\begin{itemize}
+    \item количество и условные имена экземпляров ядер;
+    \item тактовая частота работы ядра;
+    \item для каждого ядра: выбор региона SLR, памяти DDR,
+          высокопроизводительной памяти PLRAM;
+    \item параметры синтеза и оптимизации проекта.
+\end{itemize}
+
+На листинге \ref{lst:conf} представлен конфигурационный файл использующий в
+данной работе в соответствии с индивидуальным вариантом.
+
 \mylisting{Конфигурационный файл}{conf}{1-11}{rtl_kernel_wizard_0_ex.cfg}
 
+В результате компиляции генерируется файл \texttt{*.xclbin}, который может быть
+передан в ускорительную карту, также генерируется лог файл \texttt{v++*.log} и
+файл описания ресурсов \texttt{*.xclbin.info}, содержимое которых приведено в
+приложении \hyperlink{apA}{А}.
+
 \subsection{Тестирование}
+
+Для тестирования используется программа, исходный код которой представлен в
+файле \texttt{host\_example.cpp}. Цикл проверки результатов работы ускорителя по
+индивидуальному варианту представлен на листинге \ref{lst:host}.
 
 \mylisting{Модифицированный модуль
 \texttt{host\_example.cpp}}{host}{313-318}{host_example.cpp}
 
+Результаты тестирования представлены на рисунке \ref{img:test}.
+
 \img{110mm}{testPassed}{Результаты тестирования}{test}
 
+Таким образом, все тесты были пройдены, и программа на ускорителе работает
+верно.
