--- a/sem05/lab04/tex/07-conclusion.tex
+++ b/sem05/lab04/tex/07-conclusion.tex
@@ -1,3 +1,20 @@
 \chapter*{Заключение}
 \addcontentsline{toc}{chapter}{Заключение}
 
+В ходе лабораторной работы были изучены архитектуры гетерогенных вычислительных
+систем и технологии разработки ускорителей вычислений на базе ПЛИС фирмы
+Xilinx.
+
+Были выполнены следующие задачи:
+\begin{itemize}
+    \item изучены основные сведения о платформе Xilinx Alveo U200;
+    \item разработано RTL описание ускорителя вычислений по индивидуальному
+          варианту;
+    \item выполнена генерация ядра ускорителя;
+    \item выполнены синтез и сборка бинарного модуля ускорителя;
+    \item разработано и отлажено тестирующее программное обеспечение на
+          серверной хост-платформе;
+    \item проведены тесты работы ускорителя вычислений.
+\end{itemize}
+
+Таким образом, все поставленные задачи были выполнены, а цель достигнута.
