ADD: lab03 intro

--- a/sem05/lab03/tex/03-intro.tex
+++ b/sem05/lab03/tex/03-intro.tex
@@ -1,18 +1,20 @@
 \chapter*{Введение}
 \addcontentsline{toc}{chapter}{Введение}
 
-\textbf{Целью данной работы} является
+\textbf{Целью данной работы} является освоение принципов эффективного
+использования подсистемы памяти современных универсальных ЭВМ, обеспечивающей
+хранение и своевременную выдачу команд и данных в центральное процессорное
+устройство. Работа проводится с использованием программы для сбора и анализа
+производительности PCLAB.
 
 Для достижения поставленной цели необходимо выполнить следующие
 \textbf{задачи}:
 \begin{itemize}[left=\parindent]
-    \item
-    \item
-    \item
-    \item
-    \item
-    \item
-    \item
-    \item
-    \item
+    \item ознакомиться с теоретическим материалом, касающимся особенностей
+          функционирования подсистемы памяти современных конвейерных
+          суперскалярных ЭВМ;
+    \item изучить возможности программы PCLAB, изучить средства идентификации
+          микропроцессоров;
+    \item провести исследования времени выполнения тестовых программ, сделать
+          выводы о архитектурных особенностях используемых ЭВМ.
 \end{itemize}
