--- a/sem05/lab04/tex/05-main.tex
+++ b/sem05/lab04/tex/05-main.tex
@@ -39,12 +39,12 @@
 шине AXI4 MM из DDR памяти, на рисунке \ref{img:vDiag02} -- транзация записи
 данных, на рисунке \ref{img:vIncDiag} -- инкремент данных в модуле.
 
-\img{60mm}{vDiag01}{Транзакция чтения данных вектора на шине AXI4 MM из DDR
+\img{53mm}{vDiag01}{Транзакция чтения данных вектора на шине AXI4 MM из DDR
 памяти}{vDiag01}
 
-\img{60mm}{vDiag02}{Транзакция запписи данных на шине AXI4 MM}{vDiag02}
+\img{55mm}{vDiag02}{Транзакция запписи данных на шине AXI4 MM}{vDiag02}
 
-\img{60mm}{vIncDiag}{Инкремент данных в модуле}{vIncDiag}
+\img{55mm}{vIncDiag}{Инкремент данных в модуле}{vIncDiag}
 
 \subsection{Сборка проекта}
 
@@ -67,7 +67,7 @@
 В результате компиляции генерируется файл \texttt{*.xclbin}, который может быть
 передан в ускорительную карту, также генерируется лог файл \texttt{v++*.log} и
 файл описания ресурсов \texttt{*.xclbin.info}, содержимое которых приведено в
-приложении \hyperlink{apA}{А}.
+\hyperlink{apA}{приложении}.
 
 \subsection{Тестирование}
 
