--- a/sem05/lab04/tex/preamble.inc.tex
+++ b/sem05/lab04/tex/preamble.inc.tex
@@ -46,6 +46,7 @@
 \usepackage[newfloat]{minted}
 \usepackage{verbatim}
 \usepackage[framemethod=tikz]{mdframed}
+\usepackage{pdfpages}
 
 \mdfdefinestyle{mymdstyle}{
     innerleftmargin=0mm,
