--- a/sem05/lab05/tex/03-intro.tex
+++ b/sem05/lab05/tex/03-intro.tex
@@ -5,3 +5,15 @@
 аппаратных устройств ускорения вычислений по описаниям на языках высокого
 уровня. 
 
+Для достижения поставленной цели необходимо выполнить следующие
+\textbf{задачи}:
+\begin{itemize}
+    \item рассмотреть маршрут проектирования устройств, представленных в виде
+          синтаксических конструкций ЯВУ C/C++;
+    \item изучить принципы работы IDE Xilinx Vitis HLS;
+    \item изучить методику анализа и отладки устройств;
+    \item разработать ускоритель вычислений по индивидуальному заданию;
+    \item разработать код для тестирования ускорителя;
+    \item реализовать ускоритель с помощью средств высоко-уровненного синтеза;
+    \item выполнить его отладку.
+\end{itemize}
