ADD: lab05 analytical

--- a/sem05/lab05/tex/04-analytical.tex
+++ b/sem05/lab05/tex/04-analytical.tex
@@ -1,2 +1,89 @@
 \chapter{Основные теоретические сведения}
 
+В данном разделе описаны методология ускорения вычислений на основе ПЛИС и способы
+оптимизации времени обработки и пропускной способности на ускорителе
+вычислений \textbf{Xilinx Alveo}.
+
+\section{Методология ускорения вычислений на основе ПЛИС}
+
+Ускорение вычислительных алгоритмов с использованием программируемых логических
+интегральных схем (ПЛИС) имеет ряд преимуществ по сравнению с их реализацией на
+универсальных микропроцессорах, или графических процессорах. В то время, как
+традиционная разработка программного обеспечения связана с программированием на
+заранее определенном наборе машинных команд, разработка программируемых
+устройств --- это создание специализированной вычислительной структуры для
+реализации желаемой функциональности.
+
+Микропроцессоры и графические процессоры имеют предопределенную архитектуру с
+фиксированным количеством ядер, набором инструкций, и жесткой архитектурой
+памяти, и обладают высокими тактовыми частотами и хорошо сбалансированной
+конвейерной структурой. Графические процессоры масштабируют производительность
+за счет большого количества ядер и использования параллелизма SIMD/SIMT
+(рисунок \ref{img:teor}). В отличие от них, программируемые устройства
+представляют собой полностью настраиваемую архитектуру, которую разработчик
+может использовать для размещения вычислительных блоков с требуемой
+функциональностью. В таком случает, высокий уровень производительности
+достигается за счет создания длинных конвейеров обработки данных, а не за счет
+увеличения количества вычислительных единиц. Понимание этих преимуществ
+является необходимым условием для разработки вычислительных устройств и
+достижения наилучшего уровня ускорения.
+
+\img{70mm}{teor}{Принципы организации вычислений на различных платформах}{teor}
+
+Методологию создания ускорителей на ПЛИС с применением средств синтеза высокого
+уровня (High Level Synthesis, HLS) можно представить в виде трех этапов:
+
+\begin{itemize}
+	\item создание архитектуры приложения;
+	\item разработка ядра аппаратного ускорителя на языках C/C++;
+	\item анализ производительности и выявление способов ее повышения.
+\end{itemize}
+
+
+\section{Оптимизация времени обработки и пропускной способности}
+
+Существует несколько подходов к оптимизации.
+
+\subsection{Конвейерная обработка циклов}
+
+Полагая, что одна итерация цикла занимает более одного такта (фаза выборки
+данных, фаза вычисления, фаза записи результата) в таком варианте может быть
+организован конвейер выполнения. Для этого необходимо поместить в тело цикла
+прагму \texttt{<HLS PIPELINE>}.
+
+Без конвейерной обработки каждая последующая итерация цикла начинается в каждом
+третьем такте. При конвейерной обработке цикл может начинать последующие
+итерации цикла менее чем за три такта, например, в каждом втором такте или в
+каждом такте. Для указания конкретного значения интервала запуска заданий
+используется свойство Initiation inteval (II). Например: \texttt{\#pragma HLS
+PIPELINE II = 1}
+
+Стоит отметить, что конвейерная обработка цикла приводит к разворачиванию любых
+циклов, вложенных внутрь конвейерного цикла. Если внутри цикла существуют
+зависимости по данным, может оказаться невозможным достичь запуска новой
+итерации в каждом такте, и результатом может быть больший интервал инициации.
+
+
+\subsection{Разворачивание циклов}
+
+Разворачивание циклов является общепризнанным механизмом снижения времени
+выполнения циклов. Этот механизм может быть описан самим разработчиком вручную,
+если он просто повторит вычисления и сократит количество итераций цикла. С
+помощью прагмы \texttt{<HLS UNROLL>} компилятор \texttt{v++} позволяет
+запустить механизм автоматического разворачивания цикла, частично или
+полностью.
+
+
+\subsection{Потоковая обработка}
+
+Реализация механизма потоковой обработки (\texttt{\#pragma HLS DATAFLOW}) также
+опирается на представление вычислительных действий в виде многостадийного
+конвейера. Однако, в то время как директива конвейеризации (\texttt{\#pragma
+HLS PIPELINE}) используется для реализации конвейера выполнения операций внутри
+функций или циклов, потоковая обработка данных позволяет сформировать конвейер
+из более крупных вычислительных блоков: нескольких функций или нескольких
+последовательных циклических конструкций. Таким образом, директива \texttt{HLS
+DATAFLOW} позволяет сформировать вычислительный конвейер на уровне задач. Для
+этих целей компилятор HLS Vitis выполнит анализ зависимостей по данным между
+задачами и реализует структуру обрабатывающих блоков и FIFO очередей между
+ними.
