--- a/sem05/lab05/tex/06-questions.tex
+++ b/sem05/lab05/tex/06-questions.tex
@@ -1,1 +1,87 @@
 \chapter{Контрольные вопросы}
+
+В данном разделе представлены ответы на контрольные вопросы.
+
+\noindent
+\begin{itemize}[left=-0.5\parindent]
+    \item \textbf{Назовите преимущества и недостатки аппаратных ускорителей на
+          ПЛИС по сравнению с CPU и графическими ускорителями}
+
+        Преимущества:
+        \begin{itemize}
+            \item создание специализированной вычислительной структуры для
+                  реализации желаемой функциональности;
+            \item низкая стоимость в сравнению с обычными аппаратными
+                  ускорителями;
+            \item большая частота эмуляции;
+            \item компактность.
+        \end{itemize}
+
+        Недостатки:
+        \begin{itemize}
+            \item необходимость перекомпиляции проекта и переконфигурации ПЛИС
+                  при любом исправлении содержимого проекта;
+            \item наличие специализированного программного обеспечения для
+                  разделения модели микросхемы на части для загрузки в
+                  отдельные ПЛИС.
+        \end{itemize}
+        ~\\
+
+    \item \textbf{Назовите основные способы оптимизации циклических конструкций
+          ЯВУ, реализуемых в виде аппаратных ускорителей}
+        \begin{itemize}[leftmargin=\parindent]
+            \item конвейерная обработка;
+            \item разворачивание циклов;
+            \item потоковая обарботка.
+        \end{itemize}
+        ~\\
+
+    \item \textbf{Назовите этапы работы программной части ускорителя в хост
+          системе}
+        \begin{enumerate}[leftmargin=\parindent]
+            \item[Этап 1.] Инициализация среды OpenCL.
+            \item[Этап 2.] Создание трех буферов, необходимых для
+            обмена данными с ядром: два буфера для передачи исходных данных и
+            один для вывода результата.
+            \item[Этап 3.] Запуск задачи на исполнение.
+            \item[Этап 4.] Чтение выходного буфера, содержащего результаты
+            работы ядра, после завершения работы всех команд.
+        \end{enumerate}
+        ~\\
+
+    \item \textbf{В чем заключается процесс отладки для вариантов сборки
+          Emulation-SW, Emulation-HW и Hardware?}
+        \begin{itemize}[leftmargin=\parindent]
+            \item \textit{Программная эмуляция} (Emulation-SW) --- код ядра
+                  компилируется для работы на ЦПУ хост-системы. Этот вариант
+                  сборки служит для верификации совместного исполнения кода
+                  хост-системы и кода ядра, для выявления синтаксических
+                  ошибок, выполнения отладки на уровне исходного кода ядра,
+                  проверки поведения системы.
+
+            \item \textit{Аппаратная эмуляция} (Emulation-HW) --- код ядра
+                  компилируется в аппаратную модель (RTL), которая запускается
+                  в специальном симуляторе на ЦПУ. Этот вариант сборки и
+                  запуска занимает больше времени, но обеспечивает подробное и
+                  точное представление активности ядра. Данный вариант сборки
+                  полезен для тестирования функциональности ускорителя и
+                  получения начальных оценок производительности.
+
+            \item \textit{Аппаратное обеспечение} (Hardware) - код ядра
+                  компилируется в аппаратную модель (RTL), а затем реализуется
+                  на FPGA. В результате формируется двоичный файл xclbin,
+                  который будет работать на реальной FPGA.
+            \end{itemize}
+            ~\\
+
+    \item \textbf{Какие инструменты и средства анализа результатов синтеза
+          возможно использовать в Vitis HLS для оптимизации ускорителей?}
+        \begin{itemize}[leftmargin=\parindent]
+            \item компилятор Xilinx Vitis v++;
+            \item Assistant View (получение отчетов о сборке аппартных ядер);
+            \item внутрисхемный отладчик Vivado (отслеживание любых сигналов
+                  ускорителя для анализа событий);
+            \item сводный отчет Link Summary (Vitis Analyzer, получение
+                  диаграмм системы и платформы и др.)
+        \end{itemize}
+\end{itemize}
