ADD: lab04 draft

--- a/sem05/lab03/tex/report.tex
+++ b/sem05/lab03/tex/report.tex
@@ -10,5 +10,8 @@
 \include{02-content}
 \include{03-intro}
 \include{04-analytical}
+\include{05-main}
+\include{06-questions}
+\include{07-conclusion}
 
 \end{document}
