ADD: lab03 tasks 01-02

--- a/sem05/lab03/tex/listings.inc.tex
+++ b/sem05/lab03/tex/listings.inc.tex
@@ -72,7 +72,7 @@
 
 % set asm listing style
 \lstset{
-	language={[x86masm]Assembler},
+	language={},
 	backgroundcolor=\color{white},
 	basicstyle=\footnotesize\ttfamily,
 	keywordstyle=\color{black},
