--- a/sem05/lab03/tex/05-main.tex
+++ b/sem05/lab03/tex/05-main.tex
@@ -1,13 +1,23 @@
-\section{Характеристики процессора}
+\chapter{Практическая часть}
 
-На рисунке \ref{img:settings} представлены характеристики процессора компьютера в лабороторной аудитории, которые получены в программе \textbf{PCLAB}.
+В данном разделе представлен ход выполнения лабораторной работы.
 
-%\imgScale{0.3}{settings}{Характеристики процессора}
-%
-%\imgScale{0.45}{ident_proc}{Идентификация процессора}
+\section{Задание 1}
 
+На листинге \ref{lst:proc} представлены характеристики процессора компьютера
+в лабороторной аудитории, которые получены в программе \textbf{PCLAB}.
 
-\chapter{Эксперименты}
+\mybreaklisting{Идентификация процессора}{proc}{1-97}{proc.txt}
+
+\section{Задание 2}
+
+На основании идентификационнй информации о микропроцессоре ЭВМ, представленной в задании 1 были определены следующие параметры:
+\begin{itemize}
+    \item размер линейка кэш-памяти верхнего уровня (L1): 64 байта;
+    \item объем физической памяти: 64 КБ
+\end{itemize}
+
+\section{Задание 3}
 
 Для исследования производительности был проведен ряд экспериментов, которые представлены ниже.
 
@@ -35,7 +45,6 @@
 
 \subsection{Суть эксперимента}  
 Для определения способа трансляции физического адреса приф ормировании сигналов выборки банка, выборки строки и столбца запоминающего массива применяется   процедура   замера   времени   обращения   к   динамической   памяти   по последовательным   адресам   с   изменяющимся   шагом   чтения.   Для   сравнения   времен используется обращение к одинаковому количеству различных ячеек,  отстоящих друг от друга   на   определенный шаг. Результат эксперимента представляется зависимостью времени (или количества тактов процессора), потраченного на чтение ячеек, от шага чтения. Для проведения эксперимента необходимо задать изменяемые параметры.
-
 
 \subsection{Проведение эксперимента}
 
