ADD: lab03 task 03

--- a/sem05/lab03/tex/05-main.tex
+++ b/sem05/lab03/tex/05-main.tex
@@ -11,7 +11,8 @@
 
 \section{Задание 2}
 
-На основании идентификационнй информации о микропроцессоре ЭВМ, представленной в задании 1 были определены следующие параметры:
+На основании идентификационнй информации о микропроцессоре ЭВМ, представленной
+в задании 1 были определены следующие параметры:
 \begin{itemize}
     \item размер линейка кэш-памяти верхнего уровня (L1): 64 байта;
     \item объем физической памяти: 64 КБ
@@ -19,17 +20,15 @@
 
 \section{Задание 3}
 
-Для исследования производительности был проведен ряд экспериментов, которые представлены ниже.
+\textbf{Название эксперимента} -- исследования расслоения динамической памяти.
 
-
-\section{Исследования расслоения динамической памяти}
-
-\textbf{Цель эксперимента} -- определение   способа   трансляции   физического   адреса,используемого при обращении к динамической памяти.
+\textbf{Цель эксперимента} -- определение способа трансляции физического
+адреса, используемого при обращении к динамической памяти.
 
 \subsection{Исходные данные}
 \begin{enumerate}
 	\item Размер линейки кэш-памяти верхнего уровня.
-	\item Объем физическойпамяти.
+	\item Объем физической памяти.
 \end{enumerate}
 
 \subsection{Результаты эксперимента}
@@ -39,45 +38,53 @@
 	\item Количество страниц в динамической памяти.
 \end{enumerate}
 
-
 \subsection{Описание проблемы}
-В связи с конструктивной неоднородностью   оперативной памяти,   обращение к последовательно расположенным данным   требует различного времени. В связи с этим, для создания эффективных программ необходимо учитывать расслоение памяти, характеризуемое способом трансляции физического адреса. 
+В связи с конструктивной неоднородностью оперативной памяти, обращение к
+последовательно расположенным данным требует различного времени. В связи с
+этим, для создания эффективных программ необходимо учитывать расслоение памяти,
+характеризуемое способом трансляции физического адреса. 
 
 \subsection{Суть эксперимента}  
-Для определения способа трансляции физического адреса приф ормировании сигналов выборки банка, выборки строки и столбца запоминающего массива применяется   процедура   замера   времени   обращения   к   динамической   памяти   по последовательным   адресам   с   изменяющимся   шагом   чтения.   Для   сравнения   времен используется обращение к одинаковому количеству различных ячеек,  отстоящих друг от друга   на   определенный шаг. Результат эксперимента представляется зависимостью времени (или количества тактов процессора), потраченного на чтение ячеек, от шага чтения. Для проведения эксперимента необходимо задать изменяемые параметры.
+Для определения способа трансляции физического адреса приф ормировании сигналов
+выборки банка, выборки строки и столбца запоминающего массива применяется
+процедура замера времени обращения к динамической памяти по последовательным
+адресам с изменяющимся шагом чтения. Для сравнения времен используется
+обращение к одинаковому количеству различных ячеек, отстоящих друг от друга на
+определенный шаг. Результат эксперимента представляется зависимостью времени
+(или количества тактов процессора), потраченного на чтение ячеек, от шага
+чтения. Для проведения эксперимента необходимо задать изменяемые параметры.
 
 \subsection{Проведение эксперимента}
 
-Изменяемые параметры.
-
+Изменяемые параметры:
 \begin{enumerate}
-	\item Максимальное расстояние между читаемыми блоками = 7.
-	\item Шаг увеличения расстояния между читаемыми 4-х байтовыми ячейками = 10.
-	\item Количество страниц в динамической памяти = 4.
+	\item Максимальное расстояние между читаемыми блоками = 6.
+	\item Шаг увеличения расстояния между читаемыми 4-х байтовыми ячейками = 8.
+	\item Количество страниц в динамической памяти = 2.
 \end{enumerate}
 
+На рисунке \ref{img:exp1} представлен график, полученный в результате
+эксперимента.
 
-%\imgScale{0.3}{exp1}{Результат выполнения эксперимента в PCLAB}
+\img{50mm}{exp1.jpg}{Результат эксперимента (байты -- такты)}{exp1}
 
-
-\clearpage
-
-
-Также получим значения следующих величин:
-
+Получим значения следующих величин:
 \begin{equation}
 	B = T_1 / M,
 \end{equation}
-где \textit{B} -- количество банков; $T_1$ -- минимальный шаг чтения динамической памяти, при котором происходит постоянное обращение к одному и тому же банку; \textit{M} -- объем данных, являющийся минимальной порцией обмена кэш-памяти верхнего уровня с оперативной памятью и соответствует размеру линейки кэш-памяти верхнего уровня
-
+где \textit{B} -- количество банков; $T_1$ -- минимальный шаг чтения
+динамической памяти, при котором происходит постоянное обращение к одному и
+тому же банку; \textit{M} -- объем данных, являющийся минимальной порцией
+обмена кэш-памяти верхнего уровня с оперативной памятью и соответствует размеру
+линейки кэш-памяти верхнего уровня
 
 А также
-
 \begin{equation}
 	S = T_2 / B,
 \end{equation}
-где \textit{B} -- количество банков; $T_2$ -- соответствует расстоянию (в байтах) между началом двух последовательных страниц одного банка; \textit{S} -- количество секторов.
-
+где \textit{B} -- количество банков; $T_2$ -- соответствует расстоянию (в
+байтах) между началом двух последовательных страниц одного банка; \textit{S} --
+количество секторов.
 
 В результате эксперимента было получено, что $T_1 = 128$ и $T_2 = 4096$, тогда:
 
@@ -92,9 +99,9 @@
 
 \subsection{Вывод}
 
-Необходимо учитывать расслоение памяти при обработке данных, потому что оперативная память неоднородна, поэтому для обращение к последовательно расположенным данным может потребоваться разное количество времени.
-
-
+Необходимо учитывать расслоение памяти при обработке данных, потому что
+оперативная память неоднородна, поэтому для обращение к последовательно
+расположенным данным может потребоваться разное количество времени.
 
 \section{Сравнение эффективности ссылочных и векторных структур}
 
